Fix distorted page avatars on dashboard.

--- a/app/assets/stylesheets/facebook_pages.css.scss
+++ b/app/assets/stylesheets/facebook_pages.css.scss
@@ -1,45 +1,52 @@
 .facebook_page_preview {
-    width:100%;
-    height:94px;
-    padding:20px 0px;
-    border-bottom: 1px solid #ddd;
-        
-    .title {
+  width:100%;
+  height:94px;
+  padding:20px 0px;
+  border-bottom: 1px solid #ddd;
+
+  .title {
     float:left;
     margin-top:16px;
     margin-left:10px;
 
-
-      h1 {
-        font-size: 24px;
-        line-height: 24px;
-        margin-top: 6px;
-      }
-
-      h2 {
-        font-size:14px;
-        font-weight:normal;
-          
-        span {
-          color:#a1a1a1;
-        }
-      }
+    h1 {
+      font-size: 24px;
+      line-height: 24px;
+      margin-top: 6px;
     }
 
-    .image {
-      float: left;
-      width: 94px;
-      height: 94px;
-      margin: 0px 20px 0 0;
-      background-color: #ddd;
+    h2 {
+      font-size:14px;
+      font-weight:normal;
 
-      img {
-        float:left;
-        border: solid 2px #ddd;
-        margin:auto 0px;
-        vertical-align:middle;
+      span {
+        color:#a1a1a1;
       }
     }
+  }
+
+  .image {
+    float: left;
+    width: 94px;
+    height: 94px;
+    margin: 0px 20px 0 0;
+    background-color: #ddd;
+    overflow: hidden;
+
+    a {
+      display: block;
+      overflow: hidden;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      float:left;
+      border: solid 2px #ddd;
+      margin:auto 0px;
+      vertical-align:middle;
+    }
+  }
 
     .buttons {
       float: right;
@@ -48,7 +55,7 @@
   }
 
 ul.tumbnails.facebook_pages {
-  
+
   li.facebook_page {
     display: table;
     float: none;
@@ -99,13 +106,6 @@ ul.tumbnails.facebook_pages {
       top: 0;
       left: 0;
     }
-  }
-}
-
-body.facebook_pages {
-
-  &.show {
-
   }
 }
 
